--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,7 +5,8 @@ html
       | Bookshelf
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all'
-    = javascript_pack_tag 'application'
+    = stylesheet_bundle_tag 'bundle'
+    = javascript_bundle_tag 'bundle'
+
   body
     = yield
