--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,8 +5,7 @@ html
       | Bookshelf
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_bundle_tag 'bundle'
-    = javascript_bundle_tag 'bundle'
-
+    = stylesheet_link_tag 'application', media: 'all'
+    = javascript_pack_tag 'application'
   body
     = yield
