--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,1 +1,1 @@
-@import 'bootstrap-material-design/dist/css/bootstrap-material-design';
+@import 'bootstrap-material-design/dist/css/bootstrap-material-design.css';
