Add feature of login and logout

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,4 +13,8 @@ html
     = javascript_include_tag 'application'
   body
     = render partial: 'layouts/header'
-    = yield
+    main
+      .container
+        - flash.each do |key, value|
+          = content_tag(:div, value, role: 'alert', class: "alert alert-#{key}")
+      = yield
