Update header to exchange view when login and logout

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,18 +1,23 @@
-nav.navbar.navbar-expand-lg.sticky-top.navbar-light.bg-light
-  = link_to 'Navbar', root_path, class: 'navbar-brand'
-  button.navbar-toggler[type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"]
-    span.navbar-toggler-icon
-  #navbarNavDropdown.collapse.navbar-collapse
-    ul.navbar-nav.w-100.d-flex.justify-content-between
-      li.nav-item.mx-auto
-        = link_to '書籍一覧', '#', class: 'nav-link'
-      li.nav-item.mx-auto
-        = link_to '書籍検索', '#', class: 'nav-link'
-      li.nav-item.mx-auto
-        = link_to 'ランキング', '#', class: 'nav-link'
-      li.nav-item.dropdown.mx-auto
-        a#navbarDropdownMenuLink.nav-link.dropdown-toggle[href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"]
-          | DropDownLink
-        .dropdown-menu[aria-labelledby="navbarDropdownMenuLink"]
-          = link_to 'プロフィール', '#', class: 'dropdown-item'
-          = link_to 'ログアウト', '#', class: 'dropdown-item'
+header
+  nav.navbar.navbar-expand-lg.sticky-top.navbar-light.bg-light
+    = link_to 'Navbar', root_path, class: 'navbar-brand'
+    button.navbar-toggler[type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"]
+      span.navbar-toggler-icon
+    #navbarNavDropdown.collapse.navbar-collapse
+      ul.navbar-nav.w-100.d-flex.justify-content-between
+        li.nav-item.mx-auto
+          = link_to '書籍一覧', '#', class: 'nav-link'
+        li.nav-item.mx-auto
+          = link_to '書籍検索', '#', class: 'nav-link'
+        li.nav-item.mx-auto
+          = link_to 'ランキング', '#', class: 'nav-link'
+        - if logged_in_user?
+          li.nav-item.dropdown.mx-auto
+            a#navbarDropdownMenuLink.nav-link.dropdown-toggle[href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"]
+              = current_user.name
+            .dropdown-menu[aria-labelledby="navbarDropdownMenuLink"]
+              = link_to 'プロフィール', '#', class: 'dropdown-item'
+              = link_to I18n.t(:logout), logout_path, method: :delete, class: 'dropdown-item'
+        - else
+          li.nav-item.mx-auto
+            = link_to I18n.t(:login), login_path, class: 'nav-link'
