--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -25,4 +25,10 @@
                 | &nbsp;/&nbsp;
               = book.publisher
           .card-footer.text-center
-            = link_to I18n.t(:add_to_bookshelf), '#', class: 'btn btn-raised btn-primary'
+            - if logged_in_user? && @added_books_unique_ids.include?(book.google_books_id)
+              button.btn.btn-raised.btn-info[type="button" disabled]
+                = I18n.t(:already_added)
+            - else
+              = form_with scope: 'book', url: add_book_bookshelves_path, method: :post, local: true, class: 'mb-0' do |f|
+                = f.hidden_field :google_books_id, value: book.google_books_id
+                = f.submit I18n.t(:add_to_bookshelf), class: 'btn btn-raised btn-primary'
