--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -29,5 +29,5 @@
               = button_tag I18n.t(:already_added), type: 'button', disabled: true, class: 'btn btn-raised btn-info'
             - else
               = form_with scope: 'book', url: add_book_bookshelves_path, method: :post, local: true, class: 'mb-0' do |f|
-                = f.hidden_field :google_books_id, value: book.google_books_id
+                = f.hidden_field :google_books_id, value: book.google_books_id, id: book.google_books_id
                 = f.submit I18n.t(:add_to_bookshelf), class: 'btn btn-raised btn-primary'
