--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,5 +1,5 @@
 header
-  nav.navbar.navbar-expand-lg.sticky-top.navbar-light.bg-light
+  nav.navbar.navbar-expand-lg.fixed-top.navbar-light.bg-light
     = link_to 'Navbar', root_path, class: 'navbar-brand'
     button.navbar-toggler[type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation"]
       span.navbar-toggler-icon
