Add feature of reviews#create

--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -1,11 +1,11 @@
 .container
-  .book-info.bg-white.p-3
+  .book-info.p-3.mb-3
     h2.text-center.mb-4
       = Book.model_name.human
       = I18n.t(:show)
     .row.justify-content-center
       .col-sm-12.col-md-4.col-lg-3.item-img-area
-        .card
+        .card.bg-light
           .card-header
             img.img-thumbnail[src="#{@book.image_url}" alt='No Image' class='d-block mx-auto']
           .card-body.mx-auto
@@ -45,7 +45,26 @@
             span.mx-2
               | 3件
     .row.justify-content-center
-      .col-sm-12.col-md-9
+      .col-sm-12.col-md-10
         h4.text-center.mt-4
           = Book.human_attribute_name(:description)
         p.text-justify= @book.description
+
+  - if current_user
+    .new_review
+      .row.justify-content-center
+        .col-sm-12.col-md-6.bg-white.p-3
+          h2.text-center= I18n.t(:write_review)
+          = form_with model: @review, url: book_reviews_path(@book.id), local: true do |f|
+            = f.hidden_field :book_id, value: @book.id
+            .form-group
+              = f.label :title, Review.human_attribute_name(:title)
+              = f.text_field :title, class: 'form-control', required: true
+            .form-group
+              = f.label :rate, Review.human_attribute_name(:rate), class: 'bmd-label-static'
+              #review_rate.new_rating.form-control
+            .form-group
+              = f.label :content, Review.human_attribute_name(:content)
+              = f.text_area :content, class: 'form-control pt-2', required: true, rows: 6
+            .form-group
+              = f.submit I18n.t(:write), class: 'btn btn-raised btn-block btn-primary mt-5'
