--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -1,5 +1,5 @@
 .container
-  .book-info.p-3.mb-3
+  .book-info.p-3.mt-3.mb-4
     h2.text-center.mb-4
       = Book.model_name.human
       = I18n.t(:show)
@@ -50,8 +50,25 @@
           = Book.human_attribute_name(:description)
         p.text-justify= @book.description
 
+  .reviews
+    - @book.reviews.each do |review|
+      .row.justify-content-center
+        .col-sm-12.col-md-10.bg-white.p-3.mb-4.border.rounded
+          h4.mb-0.clearfix.align-middle
+            .d-block.float-left
+              = current_user.name
+              | さんのレビュー
+            - if review.user_id == current_user.id
+              .small.d-block.float-right
+                button.btn.btn-block.text-muted.mb-0
+                  | 編集
+          .mb-1.text-muted
+            = review.reviewed_at.strftime('%Y年%m月%d日')
+          .rating.mb-2[data-score="#{review.rate}"]
+          p= review.content
+
   - if current_user
-    .new_review
+    .new_review.mb-4
       .row.justify-content-center
         .col-sm-12.col-md-6.bg-white.p-3
           h2.text-center= I18n.t(:write_review)
