--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -56,7 +56,7 @@
         .col-sm-12.col-md-10.bg-white.p-3.mb-4.border.rounded
           h4.mb-0.clearfix.align-middle
             .d-block.float-left
-              = current_user.name
+              = review.user.name
               | さんのレビュー
             - if review.user_id == current_user.id
               .edit_review.small.d-block.float-right
