--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -58,7 +58,7 @@
             .d-block.float-left
               = review.user.name
               | さんのレビュー
-            - if review.user_id == current_user.id
+            - if current_user && review.user_id == current_user.id
               .edit_review.small.d-block.float-right
                 = link_to I18n.t(:edit), edit_review_path(review), class: 'btn btn-block text-muted mb-0'
           .mb-1.text-muted
