--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -11,6 +11,8 @@ header
           = link_to Book.model_name.human + I18n.t(:search), search_books_path, class: 'nav-link'
         li.nav-item.mx-auto
           = link_to 'ランキング', '#', class: 'nav-link'
+        li.nav-item.mx-auto
+          = link_to User.model_name.human + '検索', users_path, class: 'nav-link'
         - if logged_in_user?
           li.nav-item.dropdown.mx-auto
             a#navbarDropdownMenuLink.nav-link.dropdown-toggle[href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"]
