--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -3,7 +3,13 @@
     img.card-img-top.user-image.mx-auto.d-block.p-2[alt=('Card image cap') src="#{asset_pack_path 'media/images/user-default.png'}"]
     h4.text-center= @user.name
   .follow-button.text-center.mb-3
-    = link_to I18n.t(:follow_user), '#', class: 'btn btn-raised btn-primary'
+    - if logged_in_user?
+      - unless current_user?(@user)
+        #follow_form
+          - if current_user.following?(@user)
+            = render 'unfollow', user: @user
+          - else
+            = render 'follow', user: @user
 
   ul#pills-tab.nav.nav-pills.nav-justified[role='tablist']
     li.nav-item
