--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -56,7 +56,7 @@
         h6
           span.align-bottom.d-inline-block
             = I18n.t(:follower)
-          span.badge.badge-secondary.badge-pill.ml-2.py-1.px-2
+          span#followers-count.badge.badge-secondary.badge-pill.ml-2.py-1.px-2
             = @followers.count
   #pills-tabContent.tab-content
     #pills-bookshelf.tab-pane.fade.show.active aria-labelledby='piils-bookshelf-tab' role='tabpanel'
