Add id for followings count

--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -44,7 +44,7 @@
         h6
           span.align-bottom.d-inline-block
             = I18n.t(:following)
-          span.badge.badge-secondary.badge-pill.ml-2.py-1.px-2
+          span#followings-count.badge.badge-secondary.badge-pill.ml-2.py-1.px-2
             = @followings.count
     li.nav-item
       = link_to '#pills-followers',
