--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -18,7 +18,7 @@ header
             a#navbarDropdownMenuLink.nav-link.dropdown-toggle[href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"]
               = current_user.name
             .dropdown-menu[aria-labelledby="navbarDropdownMenuLink"]
-              = link_to 'プロフィール', '#', class: 'dropdown-item'
+              = link_to I18n.t(:profile), user_path(current_user), class: 'dropdown-item'
               = link_to I18n.t(:logout), logout_path, method: :delete, class: 'dropdown-item'
         - else
           li.nav-item.mx-auto
