--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -31,3 +31,5 @@
               = form_with scope: 'book', url: add_book_bookshelves_path, method: :post, local: true, class: 'mb-0' do |f|
                 = f.hidden_field :google_books_id, value: book.google_books_id, id: book.google_books_id
                 = f.submit I18n.t(:add_to_bookshelf), class: 'btn btn-raised btn-primary'
+  .d-flex.justify-content-center.mb-3
+    = paginate @books
