Add pagination for followers and followings in users#show

--- a/app/views/users/followers.html.slim
+++ b/app/views/users/followers.html.slim
@@ -6,3 +6,5 @@
   .followers-content
     #followers-list.row.d-flex
       = render @followers
+  .d-flex.justify-content-center.mb-3
+    = paginate @followers
