--- a/app/views/users/followings.html.slim
+++ b/app/views/users/followings.html.slim
@@ -6,3 +6,5 @@
   .followings-content
     #followings-list.row.d-flex
       = render @followings
+  .d-flex.justify-content-center.mb-3
+    = paginate @followings
