Add partial template of pagination

--- a/app/views/users/followers.html.slim
+++ b/app/views/users/followers.html.slim
@@ -6,5 +6,4 @@
   .followers-content
     #followers-list.row.d-flex
       = render @followers
-  .d-flex.justify-content-center.mb-3
-    = paginate @followers
+  = render 'shared/pagination', records: @followers
