--- a/app/views/users/followings.html.slim
+++ b/app/views/users/followings.html.slim
@@ -6,5 +6,4 @@
   .followings-content
     #followings-list.row.d-flex
       = render @followings
-  .d-flex.justify-content-center.mb-3
-    = paginate @followings
+  = render 'shared/pagination', records: @followings
