--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -4,5 +4,4 @@
     = I18n.t(:index)
   .row.d-flex
     = render @users
-  .d-flex.justify-content-center.mb-3
-    = paginate @users
+  = render 'shared/pagination', records: @users
