Set @reviews in controller

--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -51,7 +51,8 @@
         p.text-justify= @book.description
 
   .reviews
-    = render @book.reviews.recent
+    = render @reviews
+
   - if current_user
     .new_review.mb-4
       .row.justify-content-center
