Add pagination for reviews in books#show

--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -52,7 +52,7 @@
 
   .reviews
     = render @reviews
-
+    = render 'shared/pagination', records: @reviews
   - if current_user
     .new_review.mb-4
       .row.justify-content-center
