--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -14,4 +14,4 @@
             .card-body
               p.card-title.text-truncate
                 = book.title
-    = render 'shared/pagination', records: @user.bookshelf.books
+    = render 'shared/pagination', records: @books
