--- a/app/views/users/_user_nav.html.slim
+++ b/app/views/users/_user_nav.html.slim
@@ -1,29 +1,29 @@
-ul.nav.nav-justified
-  li.nav-item
+ul.nav.nav-tabs.nav-fill.flex-column.flex-sm-row.mb-3
+  li.nav-item.flex-sm-fill
     = link_to user_path(user), class: 'nav-link' do
       h6
         span.align-bottom.d-inline-block
           = Bookshelf.model_name.human
-        span.badge.badge-secondary.badge-pill.ml-2.py-1.px-2
+        span.badge.badge-secondary.badge-pill.ml-1.py-1.px-2
           = books_count
-  li.nav-item
+  li.nav-item.flex-sm-fill
     = link_to reviews_user_path(user), class: 'nav-link' do
       h6
         span.align-bottom.d-inline-block
           = Review.model_name.human
-        span.badge.badge-secondary.badge-pill.ml-2.py-1.px-2
+        span.badge.badge-secondary.badge-pill.ml-1.py-1.px-2
           = reviews_count
-  li.nav-item
+  li.nav-item.flex-sm-fill
     = link_to followings_user_path(user), class: 'nav-link' do
       h6
         span.align-bottom.d-inline-block
           = I18n.t(:following)
-        span#followings-count.badge.badge-secondary.badge-pill.ml-2.py-1.px-2
+        span#followings-count.badge.badge-secondary.badge-pill.ml-1.py-1.px-2
           = followings_count
-  li.nav-item
+  li.nav-item.flex-sm-fill
     = link_to followers_user_path(user), class: 'nav-link' do
       h6
         span.align-bottom.d-inline-block
           = I18n.t(:follower)
-        span#followers-count.badge.badge-secondary.badge-pill.ml-2.py-1.px-2
+        span#followers-count.badge.badge-secondary.badge-pill.ml-1.py-1.px-2
           = followers_count
