--- a/app/views/users/_user_profile.html.slim
+++ b/app/views/users/_user_profile.html.slim
@@ -1,3 +1,8 @@
 .user-profile.my-3
-  img.user-image.mx-auto.d-block.p-2[alt=('Card image cap') src="#{asset_pack_path 'media/images/user-default.png'}"]
+  - if user.avatar.attached?
+    = image_tag resized_avatar(user), class: 'user-image mx-auto d-block p-2'
+  - else
+    = image_tag "#{asset_pack_path 'media/images/user-default.png'}", class: 'user-image mx-auto d-block p-2'
   h4.text-center= user.name
+  - if current_user?(user)
+    .d-flex.justify-content-center= link_to I18n.t(:edit), edit_user_path(user), class: 'btn btn-primary'
