Small fix of UI

--- a/app/views/rankings/index.html.slim
+++ b/app/views/rankings/index.html.slim
@@ -1,8 +1,8 @@
-.container-fluid
+.container.mt-5
   h2.text-center.my-3
     = I18n.t(:ranking)
     | を見てみよう
-  ul#nav-tab.nav.nav-tabs.nav-fill.mb-2 role='tablist'
+  ul#nav-tab.nav.nav-tabs.nav-fill.mb-3 role='tablist'
     li.nav-item
       = link_to '#added-ranking',
         id: 'added-ranking-tab',
