--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -5,7 +5,7 @@
 
   .bookshelf-content
     .row.d-flex
-      - @user.bookshelf.books.each do |book|
+      - @books.each do |book|
         .col-sm-6.col-md-4.col-lg-3.mb-5
           .card
             .card-header
