--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -1,5 +1,5 @@
-.container
-  .book-info.p-3.mt-3.mb-4
+.container.mt-5
+  .book-info.mb-4
     h2.text-center.mb-4
       = Book.model_name.human
       = I18n.t(:show)
