--- a/app/views/rankings/index.html.slim
+++ b/app/views/rankings/index.html.slim
@@ -1,5 +1,5 @@
-.container
-  h2.text-center.my-3
+.container.mt-5
+  h2.text-center.mb-3
     = I18n.t(:ranking)
     | を見てみよう
   ul#nav-tab.nav.nav-tabs.nav-fill.mb-3 role='tablist'
