--- a/app/views/users/followers.html.slim
+++ b/app/views/users/followers.html.slim
@@ -1,4 +1,4 @@
-.container
+.container.mt-5
   = render 'user_profile', user: @user
   = render 'follow_button', user: @user
   = render 'user_nav', user: @user, books_count: @books_count, reviews_count: @reviews_count, followings_count: @followings_count, followers_count: @followers_count
