--- a/app/frontend/stylesheets/custom.scss
+++ b/app/frontend/stylesheets/custom.scss
@@ -21,3 +21,14 @@ img.user-image {
 .card {
   height: 100%;
 }
+
+.top-wrapper {
+  background-image: url('../images/cover.jpg');
+  background-size: cover;
+  background-position: center center;
+  height: 80vh;
+}
+
+.content {
+  height: 100%;
+}
