Add param of id to links

--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -2,4 +2,4 @@
 
 <p>以下のリンクからアカウントの有効化をお願いします。</p>
 
-<%= link_to I18n.t(:activate), edit_account_activation_url(@user.activation_token, email: @user.email) %>
+<%= link_to I18n.t(:activate), edit_account_activation_url(id: @user.activation_token, email: @user.email) %>
