--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -2,4 +2,4 @@ MyBookshelf
 
 以下のリンクからアカウントの有効化をお願いします。
 
-<%= edit_account_activation_url(@user.activation_token, email: @user.email) %>
+<%= edit_account_activation_url(id: @user.activation_token, email: @user.email) %>
