--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -2,4 +2,4 @@ MyBookshelf
 
 24時間以内に、以下のリンクからパスワードの再設定をお願いします。
 
-<%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
+<%= edit_password_reset_url(id: @user.reset_token, email: @user.email) %>
