--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -2,4 +2,4 @@
 
 <p>24時間以内に、以下のリンクからパスワードの再設定をお願いします。</p>
 
-<%= link_to I18n.t(:password_reset), edit_password_reset_url(@user.reset_token, email: @user.email) %>
+<%= link_to I18n.t(:password_reset), edit_password_reset_url(id: @user.reset_token, email: @user.email) %>
