--- a/app/views/reviews/_review.html.slim
+++ b/app/views/reviews/_review.html.slim
@@ -1,5 +1,5 @@
-.row.mx-0.mb-4.bg-white.p-3
-  .review-info.col-sm-12.col-md-9.p-3.bg-light
+.row.justify-content-center.bg-white.border.rounded.mb-4
+  .review-info.col-sm-12.col-md-9.p-3
     h4.mb-0.clearfix.align-middle
       .d-block.float-left
         = link_to review.user.name, user_path(review.user)
